fix link alignments in nav

--- a/resources/base.scss
+++ b/resources/base.scss
@@ -166,19 +166,27 @@ header {
 
 #user-links {
     top: 0;
-    right: 0;
+    right: $nav_gutter;
     position: absolute;
     color: $nav_link_hover_color;
-
-    .anon {
-        position: absolute;
-        bottom: 6px;
-        right: 5px;
-        white-space: nowrap;
+    line-height: $nav_height;
+    height: $nav_height;
+    vertical-align: middle;
+    
+    .avatar-img {
+        float: left;
+        margin: $nav_avatar_margin;
+        height: $nav_height - 2*$nav_avatar_margin;
+    }
+    .hello {
+        float: left;
+        display: inline-block;
     }
 
     a {
+        display: block;
         color: $nav_link_color;
+        height: $nav_height;
 
         &:hover {
                 color: $nav_link_hover_color;
@@ -187,54 +195,26 @@ header {
         &:active {
                 color: $nav_link_active_color;
         }
-    
     }
 
-    li {
-        text-transform: none;
+    .anon a {
+        display: inline;
     }
 
-    & > ul {
-        display: block;
-        margin: 0;
-
-        & > li > a > span {
-            font-size: 13px;
-            height: 36px;
-            padding-top: 8px;
+    .user-drop {
+        display: none;
+        background: $widget_bg;
+        margin: 0 (-$nav_gutter) 0 0;
+        padding: 0;
+        li {
+            margin: 0 $nav_gutter;
             display: block;
-            white-space: nowrap;
-
-            & > img {
-                vertical-align: middle;
-                border-radius: $widget_border_radius;
-                display: inline;
-                margin: 2px 6px 0 5px;
-            }
-
-            & > span {
-                color: $nav_link_color;
-                vertical-align: middle;
-                display: inline;
-                margin-top: 11px;
-                margin-right: 9px;
-                padding: 0;
-            }
         }
     }
-}
 
-#nav-shadow {
-    height: 3px;
-    background: linear-gradient(rgba(0, 0, 0, 0.7), transparent);
-}
-
-#nav-container {
-    background: $widget_bg;
-
-    // opacity: 0.77
-    // filter: alpha(opacity=77)
-    height: 100%;
+    &:hover .user-drop {
+        display: block;
+    }
 }
 
 #navigation {
@@ -249,32 +229,39 @@ nav {
     position: sticky;
     top: 0;
     width: 100%;
-    margin: 0 auto;
-    z-index: 500;
+    z-index: 1;
     text-align: left;
+    height: $nav_height;
 
-    .logo-img {
-        margin: 4px;
-        height: calc(100% - 8px);
+    #nav-container {
+        background: $widget_bg;
+        padding: 0 $nav_gutter 0 $nav_gutter;
+        height: 100%;
     }
 
-    ul {
-        margin: 0 0 0 -5px !important;
-        padding: 0 0 0 1%;
+    .logo-img {
+        margin: $nav_logo_margin;
+        height: $nav_height - 2*$nav_logo_margin;
+    }
+
+    #nav-list {
+        margin: 0; padding: 0;
         text-align: left;
-        display: inline;
+        display: block;
+        height: $nav_height;
         list-style: none;
         background: transparent;
 
         li {
             display: inline-block;
+            line-height: $nav_height;
+            vertical-align: middle;
             color: $nav_link_color;
-            text-transform: uppercase;
             position: relative;
 
             &.home-nav-element a {
                 padding: 0;
-                height: 44px;
+                height: 100%;
 
                 &:hover {
                     border-bottom: none;
@@ -288,8 +275,8 @@ nav {
                 text-decoration: none;
                 vertical-align: middle;
                 color: $nav_link_color;
-                padding: 13px 7px;
-                height: 18px;
+                padding: 0px $nav_gutter + $nav_logo_margin;
+                height: $nav_height;
 
                 &:link {
                     color: $nav_link_color;
@@ -309,58 +296,6 @@ nav {
                 .nav-expand {
                     display: none;
                 }
-            }
-
-            ul {
-                padding: 0;
-                position: absolute;
-                left: 5px;
-                display: none;
-                color: #fff;
-                background: $widget_bg;
-                margin: 0 !important;
-                box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.4);
-
-                li {
-                    &:first-child {
-                        a.active {
-                            border-top: 1px solid $widget_bg;
-                        }
-                    }
-                }
-
-                li {
-                    display: block;
-
-                    a, button {
-                        padding: 8px 20px 8px 8px !important;
-                        font-size: 0.8em;
-                        line-height: 18px;
-                        display: block;
-                        border-left: 4px solid $highlight_blue;
-                        white-space: nowrap;
-                    }
-                }
-            }
-
-            button {
-                background: none;
-                text-align: left;
-                border: none;
-                width: 100%;
-                border-radius: 0;
-                height: auto;
-            }
-
-            &:hover > ul, &:active > ul, &:focus > ul {
-                display: block !important;
-            }
-
-            &.home-nav-element a:hover {
-                border-bottom: 0;
-                padding-top: 0;
-                padding-bottom: 0;
-                background: transparent;
             }
         }
     }
@@ -514,25 +449,6 @@ noscript #noscript {
     flex: 1 1 1px;
 }
 
-#user-links {
-    height: 100%;
-
-    ul {
-        margin: 0;
-
-        li {
-            display: block;
-            height: 100%;
-
-            a {
-                display: block;
-                padding: 0;
-                height: 100%;
-            }
-        }
-    }
-}
-
 #page-container {
     min-height: 100%;
     position: relative;
@@ -577,40 +493,33 @@ math {
 }
 
 @media (max-width: 760px) {
-    #navigation {
-        height: 36px;
-    }
-
     #navicon {
-        transition-duration: 0.25s;
-        display: block;
-        line-height: 26px;
+        display: inline-block;
+        line-height: $nav_height - 2*$nav_logo_margin;
+        vertical-align: middle;
         font-size: 2em;
         color: #FFF;
-        padding: 0 0.25em;
-        margin: 4px 0.25em;
-        white-space: nowrap;
+        margin: $nav_logo_margin;
         float: left;
 
         &.hover {
-            color: #4db7fe;
-            text-shadow: 0 0 5px $highlight_blue;
+            color: $nav_link_active_color;
             transition-duration: 0.25s;
         }
     }
 
-    #nav-list {
+    nav #nav-list {
         display: none;
         padding: 0;
         margin-left: 0;
-        border-left: 4px solid $highlight_blue;
         position: fixed;
-        top: 36px;
+        top: $nav_height;
         background: $widget_bg;
         bottom: 0;
         width: 8em;
         left: 0;
         box-shadow: none;
+        height: 100%;
 
         li {
             display: block;
@@ -636,24 +545,6 @@ math {
 
             &.home-nav-element {
                 display: none;
-            }
-        }
-    }
-
-    #user-links {
-        bottom: 6px;
-        right: 6px;
-        position: absolute;
-
-        & > ul > li {
-            & > a > span {
-                padding-top: 4px;
-                height: 32px;
-            }
-
-            & > ul {
-                left: 0 !important;
-                margin-top: 0 !important;
             }
         }
     }
